--- a/app/stylesheets/forumby/_forum.sass
+++ b/app/stylesheets/forumby/_forum.sass
@@ -1,87 +1,58 @@
-$forum-padding: 8px
 $forum-margin: 8px
-$forum-border-width: 1px
-$forum-border-style: solid
-$forum-border-color: $forumby-blue
-$forum-text-color: $font-color
-$forum-background-color: $forumby-background-color
-$forum-header-margin: 0px
-$forum-header-color: $header-color
-$forum-description-margin: 0px 0px 4px 0px
-$forum-description-padding: 8px 0px 0px 4px
-$forum-description-border-top-width: 1px
-$forum-description-border-top-style: solid
-$forum-description-border-top-color: $forumby-blue
+$forum-padding: 0px
+$forum-background-color: lighten($forumby-blue, 20%)
 
-$forum-nested-forums-margin: 8px
-$forum-nested-forums-padding: 8px
-$forum-nested-forums-border-width: 1px
-$forum-nested-forums-border-style: solid
-$forum-nested-forums-border-color: $forumby-blue
-$forum-nested-forums-color: $font-color
-$forum-nested-forums-background-color: $forum-background-color
-$forum-nested-forum-header-margin: 0px
-$forum-nested-forum-header-color: $forumby-grey
+$forum-name-margin: 0px
+$forum-name-padding: 8px 8px 4px 8px
+$forum-name-font-size: 2em
 
-$forum-nested-forum-margin: 4px
-$forum-nested-forum-padding: 4px
-$forum-nested-forum-text-color: $font-color
+$forum-nested-forums-margin: 0px
+$forum-nested-forums-padding: 0px 16px
 
-$forum-topics-margin: 4px
-$forum-topics-padding: 4px
+$forum-nested-forum-margin: 0px
+$forum-nested-forum-padding: 8px
 
-$forum-topic-margin: 8px
+$forum-nested-forum-name-margin: 0px
+$forum-nested-forum-name-padding: 0px
+$forum-nested-forum-name-font-size: 1.2em
+
+$forum-topics-margin: 0px
+$forum-topics-padding: 0px
+
+$forum-topic-margin: 0px
 $forum-topic-padding: 8px
-$forum-topic-text-color: $font-color
-$forum-topic-background-color: $forumby-grey
-$forum-topic-header-margin: 0px
-$forum-topic-header-color: $header-color
+$forum-topic-border-top-width: 2px
+$forum-topic-border-top-style: solid
+$forum-topic-border-top-color: white
+$forum-topic-background-color: lighten($forumby-blue, 23%)
+
+$forum-topic-title-margin: 0px
+$forum-topic-title-padding: 0px
+$forum-topic-title-font-size: 1.5em
 
 // -- //
 
 .forum
-  +round-block
+  +round-top-block
 
   margin: $forum-margin
   padding: $forum-padding
 
-  border:
-    width: $forum-border-width
-    style: $forum-border-style
-    color: $forum-border-color
-
-  color: $forum-text-color
-
   background-color: $forum-background-color
 
-  h1, h2, h3, h4, h5, h6
-    margin: $forum-header-margin
+  .name
+    +block
 
-    color: $forum-header-color
+    margin: $forum-name-margin
+    padding: $forum-name-padding
 
-  .description
-    margin: $forum-description-margin
-    padding: $forum-description-padding
-
-    border-top:
-      width: $forum-description-border-top-width
-      style: $forum-description-border-top-style
-      color: $forum-description-border-top-color
+    font-size: $forum-name-font-size
 
   .nested-forums
-    +round-block
+    +block
 
     margin: $forum-nested-forums-margin
     padding: $forum-nested-forums-padding
-
-    border:
-      width: $forum-nested-forums-border-width
-      style: $forum-nested-forums-border-style
-      color: $forum-nested-forums-border-color
-
-    color: $forum-nested-forums-color
-
-    background-color: $forum-nested-forums-background-color
 
   .nested_forum
     +inline-block
@@ -89,12 +60,13 @@ $forum-topic-header-color: $header-color
     margin: $forum-nested-forum-margin
     padding: $forum-nested-forum-padding
 
-    color: $forum-nested-forum-text-color
+    .name
+      +block
 
-    h1, h2, h3, h4, h5, h6
-      margin: $forum-nested-forum-header-margin
+      margin: $forum-nested-forum-name-margin
+      padding: $forum-nested-forum-name-padding
 
-      color: $forum-nested-forum-header-color
+      font-size: $forum-nested-forum-name-font-size
 
   .topics
     +block
@@ -102,17 +74,26 @@ $forum-topic-header-color: $header-color
     margin: $forum-topics-margin
     padding: $forum-topics-padding
 
+  .forum_topic:first-child
+    border: none
+
   .forum_topic
-    +round-block
+    +block
 
     margin: $forum-topic-margin
     padding: $forum-topic-padding
 
-    color: $forum-topic-text-color
+    border-top:
+      width: $forum-topic-border-top-width
+      style: $forum-topic-border-top-style
+      color: $forum-topic-border-top-color
 
     background-color: $forum-topic-background-color
 
-    h1, h2, h3, h4, h5, h6
-      margin: $forum-topic-header-margin
+    .title
+      +block
 
-      color: $forum-topic-header-color
+      margin: $forum-topic-title-margin
+      padding: $forum-topic-title-padding
+
+      font-size: $forum-topic-title-font-size
