--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -16,6 +16,7 @@
 @import partials/block
 @import partials/inline-block
 @import partials/round-block
+@import partials/round-top-block
 @import partials/round-inline-block
 
 // Import Forumby partials
