--- a/app/views/forums/topics/_list.html.haml
+++ b/app/views/forums/topics/_list.html.haml
@@ -1,2 +1,2 @@
-%section[list, :forum]
-  %h2= link_to list.title, topic_path(list)
+%div[list, :forum]
+  = link_to list.title, topic_path(list), :class => 'title'
