--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -629,28 +629,33 @@ header #member-panel .links a {
   font-size: 1.4em;
 }
 
-/* line 23, ../../app/stylesheets/forumby/_top_level_forum.sass */
+/* line 26, ../../app/stylesheets/forumby/_top_level_forum.sass */
 .top_level_forum {
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -o-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -khtml-border-radius: 5px;
-  border-radius: 5px;
+  -moz-border-radius-topleft: 5px;
+  -webkit-border-top-left-radius: 5px;
+  -o-border-top-left-radius: 5px;
+  -ms-border-top-left-radius: 5px;
+  -khtml-border-top-left-radius: 5px;
+  border-top-left-radius: 5px;
+  -moz-border-radius-topright: 5px;
+  -webkit-border-top-right-radius: 5px;
+  -o-border-top-right-radius: 5px;
+  -ms-border-top-right-radius: 5px;
+  -khtml-border-top-right-radius: 5px;
+  border-top-right-radius: 5px;
   display: block;
   margin: 8px;
   padding: 8px;
-  color: #333333;
-  background-color: #f1f4f7;
+  background-color: #e4edf9;
 }
-/* line 33, ../../app/stylesheets/forumby/_top_level_forum.sass */
+/* line 34, ../../app/stylesheets/forumby/_top_level_forum.sass */
 .top_level_forum .name {
   display: block;
   margin: 0px;
   padding: 0px;
   font-size: 2em;
 }
-/* line 41, ../../app/stylesheets/forumby/_top_level_forum.sass */
+/* line 42, ../../app/stylesheets/forumby/_top_level_forum.sass */
 .top_level_forum .description {
   display: block;
   margin: 0px 0px 4px 0px;
@@ -658,20 +663,27 @@ header #member-panel .links a {
   color: #4d4d4d;
   font-size: 1em;
 }
-/* line 51, ../../app/stylesheets/forumby/_top_level_forum.sass */
+/* line 52, ../../app/stylesheets/forumby/_top_level_forum.sass */
 .top_level_forum .nested-forums {
   display: block;
   margin: 0px;
-  padding: 4px;
+  padding: 8px;
 }
-/* line 57, ../../app/stylesheets/forumby/_top_level_forum.sass */
+/* line 58, ../../app/stylesheets/forumby/_top_level_forum.sass */
 .top_level_forum .nested_forum {
   display: inline-block;
   margin: 0px 4px;
-  padding: 4px;
+  padding: 0px;
+}
+/* line 64, ../../app/stylesheets/forumby/_top_level_forum.sass */
+.top_level_forum .nested_forum .name {
+  display: block;
+  margin: 0px;
+  padding: 0px;
+  font-size: 1.2em;
 }
 
-/* line 38, ../../app/stylesheets/forumby/_category.sass */
+/* line 42, ../../app/stylesheets/forumby/_category.sass */
 .category {
   -moz-border-radius-topleft: 5px;
   -webkit-border-top-left-radius: 5px;
@@ -690,24 +702,24 @@ header #member-panel .links a {
   padding: 0px;
   background-color: #edeceb;
 }
-/* line 47, ../../app/stylesheets/forumby/_category.sass */
+/* line 50, ../../app/stylesheets/forumby/_category.sass */
 .category .name {
   display: block;
   margin: 0px;
   padding: 8px;
   font-size: 2em;
 }
-/* line 55, ../../app/stylesheets/forumby/_category.sass */
+/* line 58, ../../app/stylesheets/forumby/_category.sass */
 .category .forums {
   display: block;
   margin: 0px;
   padding: 0px;
 }
-/* line 61, ../../app/stylesheets/forumby/_category.sass */
+/* line 64, ../../app/stylesheets/forumby/_category.sass */
 .category .category_forum:first-child {
   border: none;
 }
-/* line 64, ../../app/stylesheets/forumby/_category.sass */
+/* line 67, ../../app/stylesheets/forumby/_category.sass */
 .category .category_forum {
   display: block;
   margin: 0px;
@@ -715,16 +727,16 @@ header #member-panel .links a {
   border-top-width: 2px;
   border-top-style: solid;
   border-top-color: white;
-  background-color: #f1f4f7;
+  background-color: #f1f6fc;
 }
-/* line 77, ../../app/stylesheets/forumby/_category.sass */
+/* line 80, ../../app/stylesheets/forumby/_category.sass */
 .category .category_forum .name {
   display: block;
   margin: 0px;
   padding: 0px;
   font-size: 1.5em;
 }
-/* line 85, ../../app/stylesheets/forumby/_category.sass */
+/* line 88, ../../app/stylesheets/forumby/_category.sass */
 .category .category_forum .description {
   display: block;
   margin: 0px 0px 4px 0px;
@@ -732,102 +744,97 @@ header #member-panel .links a {
   color: #4d4d4d;
   font-size: 1em;
 }
-/* line 95, ../../app/stylesheets/forumby/_category.sass */
+/* line 98, ../../app/stylesheets/forumby/_category.sass */
 .category .category_forum .nested-forums {
   display: block;
   margin: 0px;
-  padding: 4px;
+  padding: 8px;
 }
-/* line 101, ../../app/stylesheets/forumby/_category.sass */
+/* line 104, ../../app/stylesheets/forumby/_category.sass */
 .category .category_forum .nested_forum {
   display: inline-block;
   margin: 0px 4px;
-  padding: 4px;
+  padding: 0px;
+}
+/* line 110, ../../app/stylesheets/forumby/_category.sass */
+.category .category_forum .nested_forum .name {
+  display: block;
+  margin: 0px;
+  padding: 0px;
+  font-size: 1.2em;
 }
 
-/* line 42, ../../app/stylesheets/forumby/_forum.sass */
+/* line 35, ../../app/stylesheets/forumby/_forum.sass */
 .forum {
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -o-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -khtml-border-radius: 5px;
-  border-radius: 5px;
+  -moz-border-radius-topleft: 5px;
+  -webkit-border-top-left-radius: 5px;
+  -o-border-top-left-radius: 5px;
+  -ms-border-top-left-radius: 5px;
+  -khtml-border-top-left-radius: 5px;
+  border-top-left-radius: 5px;
+  -moz-border-radius-topright: 5px;
+  -webkit-border-top-right-radius: 5px;
+  -o-border-top-right-radius: 5px;
+  -ms-border-top-right-radius: 5px;
+  -khtml-border-top-right-radius: 5px;
+  border-top-right-radius: 5px;
   display: block;
   margin: 8px;
-  padding: 8px;
-  border-width: 1px;
-  border-style: solid;
-  border-color: #91b7e6;
-  color: #333333;
-  background-color: white;
+  padding: 0px;
+  background-color: #e4edf9;
+}
+/* line 43, ../../app/stylesheets/forumby/_forum.sass */
+.forum .name {
+  display: block;
+  margin: 0px;
+  padding: 8px 8px 4px 8px;
+  font-size: 2em;
+}
+/* line 51, ../../app/stylesheets/forumby/_forum.sass */
+.forum .nested-forums {
+  display: block;
+  margin: 0px;
+  padding: 0px 16px;
 }
 /* line 57, ../../app/stylesheets/forumby/_forum.sass */
-.forum h1, .forum h2, .forum h3, .forum h4, .forum h5, .forum h6 {
-  margin: 0px;
-  color: #222222;
-}
-/* line 62, ../../app/stylesheets/forumby/_forum.sass */
-.forum .description {
-  margin: 0px 0px 4px 0px;
-  padding: 8px 0px 0px 4px;
-  border-top-width: 1px;
-  border-top-style: solid;
-  border-top-color: #91b7e6;
-}
-/* line 71, ../../app/stylesheets/forumby/_forum.sass */
-.forum .nested-forums {
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -o-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -khtml-border-radius: 5px;
-  border-radius: 5px;
-  display: block;
-  margin: 8px;
-  padding: 8px;
-  border-width: 1px;
-  border-style: solid;
-  border-color: #91b7e6;
-  color: #333333;
-  background-color: white;
-}
-/* line 86, ../../app/stylesheets/forumby/_forum.sass */
 .forum .nested_forum {
   display: inline-block;
-  margin: 4px;
-  padding: 4px;
-  color: #333333;
-}
-/* line 94, ../../app/stylesheets/forumby/_forum.sass */
-.forum .nested_forum h1, .forum .nested_forum h2, .forum .nested_forum h3, .forum .nested_forum h4, .forum .nested_forum h5, .forum .nested_forum h6 {
   margin: 0px;
-  color: #edeceb;
+  padding: 8px;
 }
-/* line 99, ../../app/stylesheets/forumby/_forum.sass */
+/* line 63, ../../app/stylesheets/forumby/_forum.sass */
+.forum .nested_forum .name {
+  display: block;
+  margin: 0px;
+  padding: 0px;
+  font-size: 1.2em;
+}
+/* line 71, ../../app/stylesheets/forumby/_forum.sass */
 .forum .topics {
   display: block;
-  margin: 4px;
-  padding: 4px;
-}
-/* line 105, ../../app/stylesheets/forumby/_forum.sass */
-.forum .forum_topic {
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -o-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -khtml-border-radius: 5px;
-  border-radius: 5px;
-  display: block;
-  margin: 8px;
-  padding: 8px;
-  color: #333333;
-  background-color: #edeceb;
-}
-/* line 115, ../../app/stylesheets/forumby/_forum.sass */
-.forum .forum_topic h1, .forum .forum_topic h2, .forum .forum_topic h3, .forum .forum_topic h4, .forum .forum_topic h5, .forum .forum_topic h6 {
   margin: 0px;
-  color: #222222;
+  padding: 0px;
+}
+/* line 77, ../../app/stylesheets/forumby/_forum.sass */
+.forum .forum_topic:first-child {
+  border: none;
+}
+/* line 80, ../../app/stylesheets/forumby/_forum.sass */
+.forum .forum_topic {
+  display: block;
+  margin: 0px;
+  padding: 8px;
+  border-top-width: 2px;
+  border-top-style: solid;
+  border-top-color: white;
+  background-color: #f1f6fc;
+}
+/* line 93, ../../app/stylesheets/forumby/_forum.sass */
+.forum .forum_topic .title {
+  display: block;
+  margin: 0px;
+  padding: 0px;
+  font-size: 1.5em;
 }
 
 /* line 39, ../../app/stylesheets/forumby/_topic.sass */
