Updated Topic style. Using Compass's CSS3 inline-block mixin. Added link helpers for every model. Using non-bang version of Hash#merge in helpers so as to not affect the hash object passed as parameter.

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -12,9 +12,9 @@
 @import partials/form
 @import partials/link
 @import partials/colors
+@import partials/box
 @import partials/inline
 @import partials/block
-@import partials/inline-block
 @import partials/round-block
 @import partials/round-top-block
 @import partials/round-inline-block
