--- a/app/views/categories/_category.html.haml
+++ b/app/views/categories/_category.html.haml
@@ -1,4 +1,4 @@
 %section[category]
-  = category_name_for category
+  = category_link_for category
   - if category.has_forums?
     %ul.forums= forums_in category
