--- a/app/views/forums/_forum.html.haml
+++ b/app/views/forums/_forum.html.haml
@@ -1,5 +1,5 @@
 %div[forum]
-  = forum_name_for forum
+  = forum_link_for forum
   - if forum.has_nested_forums?
     %ul.nested-forums= nested_forums_for forum
   - if forum.has_topics?
