--- a/app/views/topics/posts/_member.html.haml
+++ b/app/views/topics/posts/_member.html.haml
@@ -1,2 +1,2 @@
-%section[member, 'topic_post']
-  %h3= link_to member.name, member_path(member)
+%div[member, 'topic_post']
+  = member_link_for member
