--- a/app/stylesheets/forumby/_topic.sass
+++ b/app/stylesheets/forumby/_topic.sass
@@ -1,43 +1,44 @@
 $topic-margin: 8px
-$topic-padding: 8px
+$topic-padding: 0px
+$topic-background-color: #f1f4f7
 $topic-border-width: 1px
 $topic-border-style: solid
-$topic-border-color: $forumby-dark-grey
-$topic-text-color: $font-color
-$topic-background-color: $forumby-background-color
-$topic-header-margin: 0px
-$topic-header-color: $header-color
+$topic-border-color: darken($topic-background-color, 5%)
 
-$topic-posts-margin: 8px
-$topic-posts-padding: 8px
+$topic-title-margin: 0px
+$topic-title-padding: 8px
+$topic-title-font-size: 2em
 
+$topic-posts-margin: 0px
+$topic-posts-padding: 0px
+
+$topic-post-box-orient: horizontal
+$topic-post-box-align: stretch
 $topic-post-margin: 0px
 $topic-post-padding: 0px
-$topic-post-border-width: 1px
-$topic-post-border-style: solid
-$topic-post-border-color: $forumby-grey
-$topic-post-content-font-size: $blueprint-font-size
-$topic-post-text-color: $font-color
-$topic-post-background-color: $forumby-background-color
-$topic-post-header-margin: 0px
-$topic-post-header-color: $header-color
+$topic-post-width: 100%
+$topic-post-border-top-width: 1px
+$topic-post-border-top-style: solid
+$topic-post-border-top-color: $topic-border-color
 
 $topic-post-member-margin: 0px
 $topic-post-member-padding: 16px
-$topic-post-member-text-color: $font-color
-$topic-post-member-background-color: $forumby-grey
-$topic-post-member-header-margin: 0px
-$topic-post-member-header-color: $header-color
+$topic-post-member-width: 10%
+$topic-post-member-background-color: darken($topic-background-color, 10%)
+$topic-post-member-word-wrap: break-word
 
+$topic-post-content-box-flex: 1
 $topic-post-content-margin: 0px
 $topic-post-content-padding: 16px
-$topic-post-content-text-color: $font-color
 $topic-post-content-background-color: white
+$topic-post-content-font-size: $blueprint-font-size
+$topic-post-content-text-color: $font-color
+$topic-post-content-word-wrap: break-word
 
 // -- //
 
 .topic
-  +round-block
+  +round-top-block
 
   margin: $topic-margin
   padding: $topic-padding
@@ -47,14 +48,15 @@ $topic-post-content-background-color: white
     style: $topic-border-style
     color: $topic-border-color
 
-  color: $topic-text-color
-
   background-color: $topic-background-color
 
-  h1, h2, h3, h4, h5, h6
-    margin: $topic-header-margin
+  .title
+    +block
 
-    color: $topic-header-color
+    margin: $topic-title-margin
+    padding: $topic-title-padding
+
+    font-size: $topic-title-font-size
 
   .posts
     +block
@@ -63,48 +65,37 @@ $topic-post-content-background-color: white
     padding: $topic-posts-padding
 
   .topic_post
-    +block
+    +box
 
     margin: $topic-post-margin
     padding: $topic-post-padding
 
-    border:
-      width: $topic-post-border-width
-      style: $topic-post-border-style
-      color: $topic-post-border-color
+    width: $topic-post-width
 
-    color: $topic-post-text-color
-
-    background-color: $topic-post-background-color
-
-    h1, h2, h3, h4, h5, h6
-      margin: $topic-post-header-margin
-
-      color: $topic-post-header-color
+    border-top:
+      width: $topic-post-border-top-width
+      style: $topic-post-border-top-style
+      color: $topic-post-border-top-color
 
     .topic_post_member
-      +inline-block
 
       margin: $topic-post-member-margin
       padding: $topic-post-member-padding
 
-      color: $topic-post-member-text-color
+      width: $topic-post-member-width
 
       background-color: $topic-post-member-background-color
 
-      h1, h2, h3, h4, h5, h6
-        margin: $topic-post-member-header-margin
+      word-wrap: $topic-post-member-word-wrap
 
-        color: $topic-post-member-header-color
-
-    article
-      +round-inline-block
+    .content
+      +box-flex($topic-post-content-box-flex)
 
       margin: $topic-post-content-margin
       padding: $topic-post-content-padding
 
-      font-size: $topic-post-content-font-size
-
-      color: $topic-post-content-text-color
-
       background-color: $topic-post-content-background-color
+
+      font-size: $topic-post-content-font-size
+      color: $topic-post-content-text-color
+      word-wrap: $topic-post-content-word-wrap
