--- a/app/views/categories/forums/_list.html.haml
+++ b/app/views/categories/forums/_list.html.haml
@@ -1,5 +1,5 @@
 %li[list, :category]
-  = link_to list.name, forum_path(list), :class => 'name'
+  = forum_link_for list
   - if list.has_description?
     %p.description= list.description
   - if list.has_nested_forums?
