--- a/app/views/topics/posts/_list.html.haml
+++ b/app/views/topics/posts/_list.html.haml
@@ -1,3 +1,3 @@
-%section[list, :topic]
+%div[list, :topic]
   = author_information_for list
-  %article= list.content
+  %article.content= list.content
