--- a/app/stylesheets/forumby/_post.sass
+++ b/app/stylesheets/forumby/_post.sass
@@ -1,30 +1,26 @@
 $post-margin: 8px
-$post-padding: 8px
+$post-padding: 0px
+$post-background-color: #f1f4f7
 $post-border-width: 1px
 $post-border-style: solid
-$post-border-color: $forumby-grey
-$post-content-font-size: $blueprint-font-size
-$post-text-color: $font-color
-$post-background-color: $forumby-grey
-$post-header-margin: 0px
-$post-header-color: $header-color
+$post-border-color: darken($post-background-color, 5%)
 
-$post-member-margin: 8px
+$post-member-margin: 0px
 $post-member-padding: 8px
-$post-member-text-color: $font-color
-$post-member-background-color: $forumby-grey
-$post-member-header-margin: 0px
-$post-member-header-color: $header-color
+$post-member-background-color: darken($post-background-color, 0%)
+$post-member-word-wrap: break-word
 
-$post-content-margin: 8px
-$post-content-padding: 8px
-$post-content-text-color: $font-color
+$post-content-margin: 0px
+$post-content-padding: 16px
 $post-content-background-color: white
+$post-content-font-size: $blueprint-font-size
+$post-content-text-color: $font-color
+$post-content-word-wrap: break-word
 
 // -- //
 
 .post
-  +round-block
+  +round-top-block
 
   margin: $post-margin
   padding: $post-padding
@@ -34,38 +30,26 @@ $post-content-background-color: white
     style: $post-border-style
     color: $post-border-color
 
-  color: $post-text-color
-
   background-color: $post-background-color
 
-  h1, h2, h3, h4, h5, h6
-    margin: $post-header-margin
-
-    color: $post-header-color
-
-  .post_member
-    +round-inline-block
+  .member
+    +block
 
     margin: $post-member-margin
     padding: $post-member-padding
 
-    color: $post-member-text-color
-
     background-color: $post-member-background-color
 
-    h1, h2, h3, h4, h5, h6
-      margin: $post-member-header-margin
+    word-wrap: $post-member-word-wrap
 
-      color: $post-member-header-color
-
-  article
-    +round-inline-block
+  .content
+    +block
 
     margin: $post-content-margin
     padding: $post-content-padding
 
-    font-size: $post-content-font-size
-
-    color: $post-content-text-color
-
     background-color: $post-content-background-color
+
+    font-size: $post-content-font-size
+    color: $post-content-text-color
+    word-wrap: $post-content-word-wrap
