--- a/app/views/posts/_list.html.haml
+++ b/app/views/posts/_list.html.haml
@@ -1,3 +1,3 @@
-%section[list]
-  = author_information_for list
-  %article= list.content
+%div[list]
+  .member= member_link_for list.member
+  %article.content= list.content
