--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -1,3 +1,3 @@
-%section[post]
-  = author_information_for post
-  %article= post.content
+%div[post]
+  .member= member_link_for post.member
+  %article.content= post.content
